--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,7 +9,6 @@ on:
 
 jobs:
   build:
-    runs-on: ${{ matrix.os }}
     strategy:
       matrix:
         include:
@@ -19,6 +18,8 @@ jobs:
           - os: macos-latest
             label: Mac
             ext: app
+
+    runs-on: ${{ matrix.os }}
 
     steps:
       - name: 🧩 Checkout repository
@@ -36,22 +37,23 @@ jobs:
 
       - name: ⚙️ Build executable
         run: |
-          pyinstaller --onefile --windowed --name "LabelSplitter" label_splitter_ctk.py
+          pyinstaller --onefile --windowed --name LabelSplitter label_splitter_ctk.py
 
       - name: 📁 Prepare artifact folder
         run: |
-          mkdir build_output
+          mkdir -p build_output
           if [ "${{ matrix.os }}" = "windows-latest" ]; then
-            move dist\LabelSplitter.exe build_output\
+            mv dist/LabelSplitter.exe build_output/
           else
-            mv dist/LabelSplitter.app build_output/
+            # On macOS, PyInstaller produces a single executable, not a .app folder, for --onefile
+            mv dist/LabelSplitter build_output/LabelSplitter.app
           fi
 
       - name: 🗜️ Zip artifact
         run: |
           cd build_output
           if [ "${{ matrix.os }}" = "windows-latest" ]; then
-            powershell Compress-Archive -Path * -DestinationPath ../LabelSplitter_Windows.zip
+            zip -r ../LabelSplitter_Windows.zip *
           else
             zip -r ../LabelSplitter_Mac.zip *
           fi
@@ -61,4 +63,6 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: LabelSplitter_${{ matrix.label }}
-          path: LabelSplitter_${{ matrix.label }}.zip
+          path: |
+            LabelSplitter_Windows.zip
+            LabelSplitter_Mac.zip
